--- a/CompanyHomePageFlexbox/styles/global.css
+++ b/CompanyHomePageFlexbox/styles/global.css
@@ -9,6 +9,8 @@
 
 --clr--slate400: #94a3b8; /* slate400 */
 
+--clr--slate700: #334155;  /* slate700 */
+
 --clr--text: #020617;       /* slate950*/
 
 --clr--green900: #064e3b; /*  emerald900*/
